fix image alignment

--- a/src/Components/CrewMember/style.css
+++ b/src/Components/CrewMember/style.css
@@ -133,11 +133,12 @@
 
     .crew_member-image {
         justify-content: flex-end;
-        max-height: 682px;
+        flex-grow: 1;
     }
 
     .crew_member-image > img {
-        max-height: 100%;
+        height: 100%;
+        max-height: 682px;
         max-width: 100%;
         object-fit: cover; 
         object-position: 0 100%;
